--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+body, html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,6 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  /*overflow: hidden;*/
+  /*box-sizing: border-box;*/
+}
+
+#root {
+  height: 100vh;
 }
 
 code {
@@ -17,7 +26,7 @@ code {
   box-sizing: border-box;
 }
 
-ul {
+ul, h1 {
   padding: 0;
   margin: 0;
 }
